--- a/JobTracker/wwwroot/css/Details.css
+++ b/JobTracker/wwwroot/css/Details.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     padding: 2rem;
-    background-color: #f5f5f5;
-    min-height: 50vh;
+    background-color: #999999;
+    min-height: 500vh;
     
 }
 
@@ -15,6 +15,11 @@
     width: 2000px;
     
     font-family: Arial, sans-serif;
+}
+.head-class {
+    display: flex;
+    padding: 10px;
+    background-color: #222222;
 }
 
     .job-card-details h2 {
