--- a/JobTracker/Pages/Shared/_Layout.cshtml
+++ b/JobTracker/Pages/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
 
         <div class="head-class">
             <a  asp-page="Index">
-                Home
+                Home <i class="fa-solid fa-house"></i>
             </a>
             <a asp-page="/FormComponent">
-                Add
+                Add <i class="fa-solid fa-plus"></i>
                  
             </a>
                
