--- a/JobTracker/wwwroot/css/Details.css
+++ b/JobTracker/wwwroot/css/Details.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: center;
     padding: 2rem;
-    background-color: #999999;
+    background-color: rgb(206, 201, 201);
     min-height: 500vh;
-    
 }
 
 .job-card-details {
@@ -19,7 +18,7 @@
 .head-class {
     display: flex;
     padding: 10px;
-    background-color: #222222;
+    background-color: rgb(206, 201, 201);
 }
 
     .job-card-details h2 {
